# ritiktool

Laitoxx_main/Laitox_main/: _bench.py  build.bat  build.py  build_gui.py
Laitoxx_main/Laitox_main/avalonia_gui/: Program.cs  app.manifest
Laitoxx_main/Laitox_main/go_bypass/: go.sum
Laitoxx_main/Laitox_main/headers/: accept_encoding.txt  accept_language.txt  referer.txt
Laitoxx_main/Laitox_main/include/: header_manager.h  l2_attacks.h  l4_attacks.h  l7_attacks.h  (+3 more)
Laitoxx_main/Laitoxx_DDOS-main/: CMakeLists.txt  README.md  _bench_remaining.json  benchmark.py  console_app.py
Laitoxx_main/Laitoxx_DDOS-main/avalonia_gui/: App.axaml  App.axaml.cs  LaitoxxGui.csproj
Laitoxx_main/Laitoxx_DDOS-main/avalonia_gui/Models/: AttackModels.cs
Laitoxx_main/Laitoxx_DDOS-main/avalonia_gui/Views/: MainWindow.axaml.cs  PpsChartControl.cs  SpinnerControl.axaml.cs
Laitoxx_main/Laitoxx_DDOS-main/go_bypass/: bypass.go  go.mod
Laitoxx_main/Laitoxx_DDOS-main/headers/: accept.txt  client_hints.txt  sec_headers.txt  ua.txt
Laitoxx_main/Laitoxx_DDOS-main/include/: attack_engine.h  iocp_engine.h  l3_attacks.h  l7_application.h  l7_bypass.h  memory_pool.h
Laitoxx_main/Laitoxx_DDOS-main/ip-ranges/: ovh.txt  zap-hosting.txt
Laitoxx_main/Laitoxx_DDOS-main/laitoxx/: __init__.py
Laitoxx_main/Laitoxx_DDOS-main/laitoxx/cli/: pipeline.py
Laitoxx_main/Laitoxx_DDOS-main/laitoxx/config/: proxies.py
Laitoxx_main/Laitoxx_DDOS-main/laitoxx/core/: dns.py  taxonomy.py
Laitoxx_main/Laitoxx_DDOS-main/laitoxx/engine/: bypass.py
Laitoxx_main/Laitoxx_DDOS-main/laitoxx/poo/: reverse_verify.py  token.py
Laitoxx_main/Laitoxx_DDOS-main/src/: attack_engine.cpp  l3_attacks.cpp  l7_attacks.cpp  l7_database.cpp  l7_specialized.cpp
(+25 files in other folders)
